# xmonad-nix

./: README.md  flake.nix  justfile  myxmonad.cabal  xmonad-nix.cabal
.github/workflows/: ci.yaml
src/: Main.hs
